# vtk_flutter

./: .gitattributes  .gitignore  .metadata  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  ffigen.yaml  pubspec.yaml
.github/: SECURITY.md  dependabot.yml
.github/scripts/: build-native-artifact.ps1  run-android-integration.sh
.github/workflows/: native-build.yml  publish-pub.yml  quality.yml  release-native.yml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  android_vtk_texture_adapter.c  android_vtk_texture_adapter.cxx
android/src/main/kotlin/ninja/bieker/vtk_flutter/: AndroidVtkTextureAdapter.kt  VtkFlutterPlugin.kt
android/src/test/kotlin/ninja/bieker/vtk_flutter/: AndroidSessionViewControllerTest.kt  VtkFlutterPluginTest.kt
assets/: vtk_locator.LICENSE.txt  vtk_locator.js  vtk_runtime.LICENSE.txt  vtk_runtime.js
doc/: abi.md  architecture.md  development.md  licensing.md  native-artifacts.md  platform-support.md  releasing.md  vtk-session-evaluation.md
docs/: abi-v2.md  abi.md  architecture.md  platform-support.md  releasing.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/ninja/bieker/vtk_flutter_example/: MainActivity.kt
example/integration_test/: renderer_lab_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  recipes.dart  scalar_field.dart  synthetic_volume.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: recipes_test.dart  scalar_field_test.dart  showcase_app_test.dart  synthetic_volume_test.dart
example/test/support/: recording_vtk_backend.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
hook/src/: checksums.dart  download.dart  native_artifact_installer.dart  native_artifact_target.dart  safe_zip.dart
ios/: vtk_flutter.podspec
ios/Tests/: VtkFlutterPluginTests.mm  VtkFlutterProtocolTests.mm
ios/vtk_flutter/: Package.swift
ios/vtk_flutter/Sources/vtk_flutter/: VtkFlutterPlugin.h  VtkFlutterPlugin.mm  VtkFlutterProtocol.h  VtkFlutterProtocol.mm
lib/: vtk_flutter.dart  vtk_flutter_experimental.dart  vtk_flutter_method_channel.dart  vtk_flutter_platform_interface.dart  vtk_flutter_web.dart
lib/src/: backend_factory.dart  exceptions.dart  models.dart  native_backend.dart  renderer.dart  vtk_flutter_method_channel.dart  vtk_flutter_platform_interface.dart  vtk_view.dart  vtk_view_native.dart  vtk_view_web.dart
lib/src/api/: backend.dart  experimental.dart  objects.dart  runtime.dart  values.dart  vtk_api.dart
lib/src/ffi/: vtk_ffi_transport.dart  vtk_ffi_transport_base.dart  vtk_ffi_transport_native.dart  vtk_ffi_transport_stub.dart  vtk_flutter_bindings.g.dart  vtk_session_executor.dart  vtk_session_executor_base.dart  vtk_session_executor_native.dart  vtk_session_executor_stub.dart
lib/src/web/: vtk_js_module.dart  vtk_js_module_stub.dart  vtk_locator_bridge.dart  vtk_web_backend.dart  vtk_web_frame_store.dart  vtk_web_module.dart
macos/: vtk_flutter.podspec
macos/Tests/: VtkFlutterPluginTests.mm  VtkFlutterProtocolTests.mm
macos/vtk_flutter/: Package.swift
macos/vtk_flutter/Sources/vtk_flutter/: VtkFlutterNativeApi.cxx  VtkFlutterNativeSession.cxx  VtkFlutterNativeVolumePipeline.cxx  VtkFlutterPlugin.h  VtkFlutterPlugin.mm  VtkFlutterProtocol.h  VtkFlutterProtocol.mm
native/: CMakeLists.txt  THIRD_PARTY_LICENSES.txt
native/cmake/: vtkcompiletools-config-version.cmake
native/include/: vtk_flutter.h
native/src/: callback_render_target.cxx  callback_render_target.h  render_target.h  session.cxx  session.h  volume_pipeline.cxx  volume_pipeline.h  vtk_flutter.cxx
native/test/: c_contract_support.h  core_contract_test.cxx  public_header_contract.c
test/: native_backend_test.dart  vtk_flutter_method_channel_test.dart  vtk_flutter_test.dart  vtk_renderer_test.dart  vtk_view_test.dart
test/api/: typed_api_test.dart
test/ffi/: vtk_ffi_transport_native_test.dart  vtk_session_executor_native_test.dart
test/hook/: build_test.dart  checksums_test.dart  download_test.dart  native_artifact_installer_test.dart  native_artifact_target_test.dart  safe_zip_test.dart
test/tool/: bootstrap_vtk_test.dart  check_test.dart  generate_native_licenses_test.dart
test/web/: vtk_web_backend_test.dart
tool/: bootstrap_vtk.dart  check.dart  generate_native_licenses.dart  native_artifacts.dart  smoke_native_ffi.dart  test_apple_adapter.sh
web/: package-lock.json  package.json
web/scripts/: build.mjs
web/src/: vtk_locator.js  vtk_runtime.js
web/test/: vtk_runtime.test.js
windows/: CMakeLists.txt  vtk_flutter_codec.cpp  vtk_flutter_codec.h  vtk_flutter_native_exports.cpp  vtk_flutter_native_exports.h  vtk_flutter_plugin.cpp  vtk_flutter_plugin.h  vtk_flutter_plugin_c_api.cpp  windows_frame_target.cpp  windows_frame_target.h  windows_vtk_render_target.cpp  windows_vtk_render_target.h
windows/include/vtk_flutter/: vtk_flutter_plugin_c_api.h
windows/test/: vtk_flutter_plugin_test.cpp
